--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon server.js"
+        "start": "nodemon --trace-warnings server.js"
     },
     "keywords": [
         "express"
@@ -16,6 +16,7 @@
         "axios": "^1.1.3",
         "bootstrap-icons": "^1.9.1",
         "cookie-parser": "^1.4.6",
+        "cookie-session": "^2.0.0",
         "dotenv": "^16.0.3",
         "ejs": "^3.0.1",
         "express": "^4.18.2",
