--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "license": "MIT",
     "dependencies": {
         "axios": "^1.1.3",
+        "body-parser": "^1.20.1",
         "bootstrap-icons": "^1.9.1",
         "cookie-parser": "^1.4.6",
         "cookie-session": "^2.0.0",
+        "csurf": "^1.11.0",
         "dotenv": "^16.0.3",
         "ejs": "^3.0.1",
         "express": "^4.18.2",
